refs #5406 updated translations

--- a/lang/pl.json
+++ b/lang/pl.json
@@ -125,12 +125,18 @@
         "JSTracking_EnableDoNotTrackDesc": "Więc żądania śledzenia nie będą wysyłane jeżeli odwiedzający nie życzą sobie śledzenia.",
         "JSTracking_GroupPageTitlesByDomain": "Dodaj domenę do tytułu strony gdy śledzisz",
         "JSTracking_MergeSubdomains": "Śledź odwiedzających we wszystkich subdomenach",
+        "JSTracking_PageCustomVarsDesc": "Dla przykładu, z nazwą zmiennej \"Kategoria\" i wartością \"Biała Księga\".",
+        "JSTracking_VisitorCustomVars": "Śledź własne zmienne dla tego odwiedzającego",
+        "JSTracking_VisitorCustomVarsDesc": "Dla przykładu, ze nazwą zmiennej \"Typ\" i wartością \"Klient\".",
         "JSTrackingIntro1": "Możesz śledzić odwiedzających na wiele sposobów. Rekomendowane jest użycie Javascript. By użyć tej metody musisz upewnić się, że każda podstrona ma kod, który możesz wygenerować poniżej.",
         "JSTrackingIntro2": "Kiedy już massz kod śledzenia JavaScript, skopiuj i wklej go na wszystkie strony, które chcesz śledzić w Piwik.",
         "JSTrackingIntro3": "W większości stron, na blogach i CMS itd. możesz używać pluginu, który załatwi stronę techniczną za Ciebie (sprawdź naszą %1$slistę pluginów do integracji z Piwik%2$s). Jeżeli nie ma żadnych pluginów możesz wyedytować swoją stronę i dodać ten kod w pliku \"footer\".",
+        "JSTrackingIntro5": "Jeśli chcesz zrobić więcej niż śledzić odwiedziny stron, sprawdz listę dostępnych funkcji w %1$sdokumentacji Piwik Śledzenie Javascript%2$s. Przy użyciu tych funkcji możesz śledzić cele, własne zmienne, zamówienia biznesowe i inne.",
         "LatestBetaRelease": "Ostatnie wydanie beta",
         "LatestStableRelease": "Ostatnie stabilne wydanie",
+        "LogoNotWriteableInstruction": "Aby użyć swojego własnego logo zamiast domyślnego loga Piwik, nadaj uprawnienia do zapisu do katalogu: %1$s Piwik potrzebuje tych uprawnień aby zapisać Twoje loga do pliku %2$s.",
         "LogoUpload": "Wybierz logo",
+        "LogoUploadHelp": "Prześlij plik w formatach %s i o minimalnej wysokości %s pikseli.",
         "MenuDiagnostic": "Diagnostyka",
         "MenuGeneralSettings": "Konfiguracja ogólna",
         "MenuManage": "Zarządzaj",
@@ -142,12 +148,19 @@
         "PiwikIsInstalledAt": "Piwik jest zainstalowany w",
         "PluginDescription": "Strefa administratora statystyk Piwik.",
         "PluginSettingChangeNotAllowed": "Nie masz uprawnień do zmiany wartości parametru\"%s\" w pluginie \"%s\"",
+        "PluginSettingReadNotAllowed": "Nie masz uprawnień do odczytu wartości ustawienia \"%s\" w pluginie \"%s\"",
         "PluginSettings": "Ustawienia pluginów",
+        "PluginSettingsIntro": "Możesz tu zmienić ustawienia dla następujących pluginów innych autorów:",
         "PluginSettingsValueNotAllowed": "Wartość dla pola \"%s\" w pluginie \"%s\" jest niedozwolona",
+        "SendPluginUpdateCommunication": "Wyślij mi powiadomienie email gdy pojawi się aktualizacja pluginu",
+        "SendPluginUpdateCommunicationHelp": "Email zostanie wysłany do Super Użytkowników gdy pojawi się nowa wersja pluginu.",
         "TrackAGoal": "Śledź cel",
         "TrackingCode": "Kod śledzenia",
+        "TrustedHostConfirm": "Czy na pewno chcesz zmienić zaufaną nazwę hosta Piwik?",
+        "TrustedHostSettings": "Zaufana Nazwa Hosta Piwik",
         "UpdateSettings": "Zaktualizuj ustawienia",
         "UseCustomLogo": "Użyj niestandardowego logo",
+        "ValidPiwikHostname": "Prawidłowa Nazwa Hosta Piwik",
         "WithOptionalRevenue": "z optymalnym zyskiem",
         "YouAreOptedIn": "Bierzesz udział w procesie analityki statystycznej",
         "YouAreOptedOut": "Wykluczono Cię z procesu analityki statystycznej",
@@ -157,33 +170,58 @@
     "CoreHome": {
         "CategoryNoData": "Brak danych w tej kategorii. Spróbuj opcji \"Uwzględnij całą populację\".",
         "CheckForUpdates": "Sprawdź aktualizacje",
+        "CheckPiwikOut": "Sprawdź Piwik!",
+        "CloseWidgetDirections": "Możesz zamknąć ten widżet klikając na ikonie 'X' na górze widżetu.",
+        "DataForThisReportHasBeenPurged": "Dane do tego raportu są starsze niż %s miesięcy i zostały wyczyszczone.",
+        "DataTableExcludeAggregateRows": "Sumaryczne wiersze są widoczne %s Ukryj je",
+        "DataTableIncludeAggregateRows": "Sumaryczne wiersze są ukryte %s Pokaż je",
+        "DateFormat": "%longDay% %day% %longMonth% %longYear%",
         "Default": "domyślne",
+        "DonateCall1": "Piwik zawsze nie będzie Cię nic kosztował, ale to nie znaczy, że nic nas nie kosztuje aby go tworzyć.",
         "DonateCall2": "Piwik potrzebuje Twojego ciągłego wsparcia by rosnąć i kwitnąć.",
+        "DonateCall3": "Jeśli uważasz, że Piwik wniósł znaczącą wartość do Twojej firmy lub przedsięwzięcia, %1$srozważ przekazanie dotacji!%2$s",
+        "DonateFormInstructions": "Kliknij na suwaku aby wybrać ilość, następnie kliknij subskrybuj aby wesprzeć.",
         "ExternalHelp": "Pomoc (otworzy się w nowym oknie)",
         "HowMuchIsPiwikWorth": "Ile Piwik jest warty dla Ciebie?",
         "InjectedHostEmailBody": "Witaj, próbowałem dostać się dzisiaj do Piwika i napotkałem ostrzeżenie o nieznanym hoście.",
+        "InjectedHostEmailSubject": "Piwik został otwarty z nieznaną nazwą hosta: %s",
+        "InjectedHostSuperUserWarning": "Piwik mógł zostać błędnie skonfigurowany (np. jeśli Piwik został ostatnio przeniesiony na nowy serwer lub adres URL). Możesz %1$skliknąć tutaj i dodać %2$s jako prawidłową nazwę hosta Piwik (jeśli jej ufasz)%3$s, lub %4$skliknąć tutaj aby przejść do %5$s aby uzyskać bezpieczny dostęp do Piwik'a%6$s.",
+        "InjectedHostWarningIntro": "Uzyskujesz obecnie dostęp do Piwik pod adresem %1$s, ale Piwik został skonfigurowany aby działać pod adresem: %2$s.",
         "JavascriptDisabled": "Aby użyć standardowego widoku Piwik, wymagane jest zezwolenie do działanie skryptów Java.<br \/>Wydaje się jednak, że tutaj JavaScript nie działa lub jest niepoprawnie wspierany przez twoją przeglądarkę.<br \/>By użyć standardowego widoku, włącz działanie JavaScript w opcjach swojej przeglądarki, i wtedy %1$sspróbuj ponownie%2$s.<br \/>",
         "LongMonthFormat": "%longYear%, %longMonth%",
+        "LongWeekFormat": "%dayFrom% %longMonthFrom% - %dayTo% %longMonthTo% %longYearTo%",
+        "MakeOneTimeDonation": "Zamiast, przekaż jednorazową dotację.",
+        "NoPrivilegesAskPiwikAdmin": "Jesteś zalogowany jako '%s' ale wygląda na to, że nie masz nadanych żadnych uprawnień w Piwik'u. %s Poproś swojego administratora Piwik'a (kliknij aby wysłąć email)%s aby nadał Ci uprawnienia 'przeglądania' strony.",
         "OnlyForSuperUserAccess": "Ten widżet widzą tylko użytkownych z prawami dostępu Super User.",
         "PageOf": "%1$s z %2$s",
         "PeriodDay": "dzień",
         "PeriodDays": "dni",
         "PeriodMonth": "miesiąc",
         "PeriodMonths": "miesięcy",
+        "PeriodRange": "Zakres",
         "PeriodWeek": "tydzień",
         "PeriodWeeks": "tygodni",
         "PeriodYear": "rok",
         "PeriodYears": "lat",
         "PluginDescription": "Struktura raportu z analityki statystyk stron.",
         "ReportGeneratedOn": "Raport wygenerowany %s",
+        "ReportGeneratedXAgo": "Raport wygenerowany %s temu",
+        "SharePiwikLong": "Cześć! Właśnie znalazłem niezły kawałek darmowego oprogramowania: Piwik!\n\nPiwik pozwoli Ci śledzić odwiedzających Twoją stronę za darmo. Powinieneś koniecznie go sprawdzić!",
         "SharePiwikShort": "Piwik! Darmowa open source'owa analityka. Twoje dane pod Twoją kontrolą.",
+        "ShareThis": "Udostępnij to",
         "ShortDateFormat": "%shortDay% %day% %shortMonth%",
+        "ShortDateFormatWithYear": "%day% %shortMonth% %shortYear%",
         "ShortMonthFormat": "%shortMonth% %longYear%",
+        "ShortWeekFormat": "%dayFrom% %shortMonthFrom% - %dayTo% %shortMonthTo% %shortYearTo%",
         "ShowJSCode": "Pokaż kod JavaScript do umieszczenia",
+        "SubscribeAndBecomePiwikSupporter": "Przejdź do bezpiecznej karty płatności kartami kredytowymi (Paypal) aby zostać Wspierającym Piwik'a!",
         "SupportPiwik": "Wesprzyj Piwik!",
+        "TableNoData": "Brak danych dla tej tabeli.",
         "ThereIsNoDataForThisReport": "Brak danych dla tego raportu.",
+        "UnFlattenDataTable": "Raport jest jednolity %s Przełącz na hierarchiczny",
         "ViewAllPiwikVideoTutorials": "Obejrzyj wszystkie tutoriale wideo Piwik",
-        "WebAnalyticsReports": "Raport analityki statystyk stron"
+        "WebAnalyticsReports": "Raport analityki statystyk stron",
+        "YouAreUsingTheLatestVersion": "Używasz najnowszej wersji Piwik'a!"
     },
     "CorePluginsAdmin": {
         "ActionActivatePlugin": "Włącz plugin",
@@ -194,22 +232,43 @@
         "Activated": "Aktywowano",
         "Active": "Aktywna",
         "Activity": "Aktywność",
+        "AllowedUploadFormats": "Możesz wysłać plugin lub skórę w formacie .zip poprzez tą stronę.",
         "AuthorHomepage": "Strona główna Piwik",
         "Authors": "Autorzy",
         "BackToExtendPiwik": "Wróć do Marketu",
+        "BeCarefulUsingPlugins": "Pluginy nie będące autorstwa zespołu Piwik'a powinny być używane z ostrożnością: nie sprawdzamy ich.",
         "BeCarefulUsingThemes": "Szablonym, których autorem nie jest grupa Piwik, powinny by używane z rozwagą: nie sprawdzaliśmy ich.",
+        "ByWritingOwnPlugin": "przez %snapisanie swojego własnego plugin'u%s",
+        "ByXDevelopers": "przez %s deweloperów",
         "Changelog": "Log zmian",
+        "ChangeSettingsPossible": "Możesz zmienić %sustawienia%s dla tego plugin'u.",
         "CorePluginTooltip": "Pluginy do Core nie mają wersji, ponieważ są rozpowszechniane z Piwik.",
         "Deactivate": "Wyłącz",
+        "Developer": "Deweloper",
+        "DoMoreContactPiwikAdmins": "Aby zainstalować nowy plugin lub nową skórę, skontaktuj się z administratorami Piwik'a.",
+        "DownloadAndInstallPluginsFromMarketplace": "Możesz automatycznie pobrać i zainstalować nowe Plugin'y z %sMarketplace%s.",
+        "EnjoyAnotherLookAndFeelOfThemes": "Wypróbuj inny wygląd i odczucia",
+        "FeaturedPlugin": "Wyróżniony plugin",
+        "GetEarlyAccessForPaidPlugins": "Uwaga: wszystkie pluginy są obecnie dostępne za darmo; w przyszłości uruchomimy w Sklepie Płatne Pluginy (%sskontaktuj się%s dla wczesnego dostępu).",
+        "GetNewFunctionality": "Uzyskaj nową funkcjonalność",
         "History": "Historia",
         "Inactive": "Nieaktywna",
+        "InfoPluginUpdateIsRecommended": "Zaktualizuj swoje pluginy teraz, w celu uzyskania korzyści z najnowszych ulepszeń.",
+        "InfoThemeIsUsedByOtherUsersAsWell": "Uwaga: %1$s innych użytkowników zarejestrowanych w tym Piwik'u także używają skóry %2$s.",
+        "InfoThemeUpdateIsRecommended": "Zaktualizuj swoje skóry aby cieszyć się najnowszymi wersjami.",
         "InstallingPlugin": "Instalowanie %s",
+        "InstallNewPlugins": "Zainstaluj nowe pluginy",
         "InstallNewThemes": "Zainstaluj nowe szablony",
+        "LastCommitTime": "(ostatnia aktualizacja %s)",
         "LastUpdated": "Ostatnia aktualizacja",
         "LicenseHomepage": "Licencja strony głównej",
         "MainDescription": "Wtyczki zwiększają i rozszerzają funkcjonalność statystyk Piwik. Po instalacji wtyczki, możesz ją tutaj włączyć lub wyłączyć.",
+        "Marketplace": "Sklep",
+        "MarketplaceSellPluginSubject": "Sklep - Sprzedaj Plugin",
         "MenuPlatform": "Platforma",
+        "MissingRequirementsNotice": "Zaktualizuj %1$s %2$s do nowszej wersji, %1$s %3$s jest wymagana.",
         "NoPluginsFound": "Nie znaleziono pluginów",
+        "NotAllowedToBrowseMarketplacePlugins": "Możesz przeglądać listę plugin'ów które mogą zostać zainstalowane aby zmodyfikować lub rozszerzyć Twoją platformę Piwik. Skontaktuj się z administratorem jeśli chcesz zainstalować któryś z nich.",
         "NoThemesFound": "Nie znaleziono szablonów",
         "NumUpdatesAvailable": "%s aktualizacji dostępnych",
         "Origin": "Pochodzenie",
@@ -427,7 +486,6 @@
         "EncryptedSmtpTransport": "Wpisz szyfrowanie warstwy transportowej wymagane przez twój serwer SMTP.",
         "EnglishLanguageName": "Polish",
         "Error": "Błąd",
-        "ErrorRequest": "Och… wystąpił problem w czasie wykonywania, powtórz ponownie.",
         "EvolutionOverPeriod": "Postęp w okresie",
         "ExceptionConfigurationFileNotFound": "Plik konfiguracyjny {%s} nie został odnaleziony.",
         "ExceptionDatabaseVersion": "Twoja %1$s wersja to %2$s a Piwik wymaga minimum %3$s.",
