--- a/lang/tr.json
+++ b/lang/tr.json
@@ -290,6 +290,7 @@
         "DownloadingUpdateFromX": "Güncelleme %sdan indiriliyor",
         "DownloadX": "İndir %s",
         "EmptyDatabaseError": "Veritabanı %s boş. Yapılandırma dosyanızı değiştirmeniz veya silmeniz gerekmektedir.",
+        "ErrorDIYHelp": "Eğer gelişmiş bir kullanıcı iseniz ve veritabanı yükseltmesinde bir hata ile karşılaşırsanız:",
         "ErrorDIYHelp_2": "Başarız olan güncellemedeki kalan sorguları çalıştır",
         "ErrorDuringPluginsUpdates": "Eklenti güncellenirken hata meydana geldi:",
         "ExceptionAlreadyLatestVersion": "Piwik versiyonunuz %s günceldir.",
@@ -339,6 +340,7 @@
         "Dashboard": "Pano",
         "DashboardCopied": "Panel başarılı şekilde seçilen kullanıcı için kopyalandı",
         "DashboardName": "Panel adı:",
+        "DashboardOf": "Kontrol paneli %s",
         "DefaultDashboard": "Varsayılan panel - Varsayılan widget seçimleri ve sütunları kullanın",
         "DeleteWidgetConfirm": "Bu Bileşenı panodan silmek istediğinize emin misiniz?",
         "EmptyDashboard": "Boş panel - Favori widgetlarınızı seçin",
@@ -480,7 +482,6 @@
         "Edit": "Düzenle",
         "EnglishLanguageName": "Turkish",
         "Error": "Hata",
-        "ErrorRequest": "Oops… istek sırasında problem meydana geldi, lütfen tekrar deneyin.",
         "ExceptionConfigurationFileNotFound": "Yapılandırma dosyası {%s} bulunamadı.",
         "ExceptionDatabaseVersion": "Sizin %1$s versiyonunuz %2$s ama Piwik en az %3$s kabul eder.",
         "ExceptionFileIntegrity": "Bütünlük kontrolü başarısız: %s",
