--- a/plugins/DevicesDetection/lang/tr.json
+++ b/plugins/DevicesDetection/lang/tr.json
@@ -15,6 +15,7 @@
         "DeviceModel": "Cihaz modeli",
         "DevicesDetection": "Ziyaretçi Cihazları",
         "DeviceType": "Cihaz tipi",
+        "OperatingSystemVersions": "İşletim Sistemi versiyonları",
         "Smartphone": "Akıllı Telefon",
         "submenu": "Cihazlar",
         "Tablet": "Tablet",
