--- a/lang/en.json
+++ b/lang/en.json
@@ -2093,7 +2093,9 @@
         "ShowingVisits": "Geo-located visits of last",
         "Unlocated": "<b>%s<\/b> %p of the visits from %c couldn't be geo located.",
         "VisitorMap": "Visitor Map",
-        "WorldWide": "World-Wide"
+        "WorldWide": "World-Wide",
+        "WithUnknownRegion": "%s with unknown region",
+        "WithUnknownCity": "%s with unknown city"
     },
     "UserSettings": {
         "BrowserFamilies": "Browser families",
