refs piwik/piwik-mobile-2#3243 added translation key

--- a/lang/en.json
+++ b/lang/en.json
@@ -1253,8 +1253,9 @@
         "AnonymousTracking": "Anonymous tracking",
         "AskForAnonymousTrackingPermission": "When enabled, Piwik Mobile will send anonymous usage data to piwik.org. The intent is to use this data to help Piwik Mobile developers better understand how the app is used. Information sent is: menus and settings clicked on, OS name and version, any error displayed in Piwik Mobile. We will NOT track any of your analytics data. This anonymous data will never be made public. You can disable\/enable anonymous tracking in Settings at any time.",
         "ChooseHttpTimeout": "Choose HTTP timeout value",
-        "ChooseMetric": "Choose Metric",
+        "ChooseMetric": "Choose metric",
         "ChooseReport": "Choose a report",
+        "ChooseSegment": "Choose segment",
         "ConfirmRemoveAccount": "Do you want to remove this account?",
         "DefaultReportDate": "Report date",
         "EmailUs": "Email us",
