--- a/lang/el.json
+++ b/lang/el.json
@@ -605,6 +605,7 @@
         "EncryptedSmtpTransport": "Εισάγετε το κρυπτογραφημένο επίπεδο μεταφοράς που απαιτείται από τον διακομιστή SMTP σας.",
         "EnglishLanguageName": "Hellenic",
         "Error": "Σφάλμα",
+        "ErrorRequest": "Ουπς... υπήρξε πρόβλημα κατά την επεξεργασία της αίτησης. Μπορεί ο διακομιστής να είχε ένα προσωρινό πρόβλημα ή μπορεί να ζητήσατε μια αναφορά με πάρα πολλά δεδομένα. Παρακαλούμε δοκιμάστε ξανά. Αν το σφάλμα επαναλαμβάνεται διαρκώς, παρακαλούμε %sεπικοινωνήστε με τον διαχειριστή του Piwik σας%s για βοήθεια.",
         "EvolutionOverPeriod": "Εξέλιξη εντός της περιόδου",
         "EvolutionSummaryGeneric": "%1$s στο %2$s σε σύγκριση με το %3$s στο %4$s. Εξέλιξη: %5$s",
         "ExceptionCheckUserHasSuperUserAccessOrIsTheUser": "Ο χρήστης πρέπει να είναι είτε Υπερ-Χρήστης είτε ο ίδιος ο χρήστης '%s'.",
@@ -1292,6 +1293,7 @@
         "TopVisitedWebsites": "κορυφαίοι σε επισκεψιμότητα ιστοτόποι",
         "TryIt": "Δοκιμάστε το!",
         "UseSearchBarHint": "Μόνο οι πρώτες %s ιστοσελίδες εμφανίζονται εδώ. Χρησιμοποιήστε τη γραμμή αναζήτησης για να έχετε πρόσβαση στις άλλες ιστσεολίδες σας.",
+        "ValidateSslCertificate": "Επαλήθευση του πιστοποιητικού SSL",
         "VerifyAccount": "Πιστοποίηση λογαριασμού",
         "VerifyLoginData": "Σιγουρευτείται ότι συνδυασμός ονόματος χρήστη και κωδικού είναι σωστά.",
         "YouAreOffline": "Συγνώμη, είστε εκτός σύνδεσης"
