--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1069,11 +1069,14 @@
         "NfsFilesystemWarningSuffixAdmin": "Cela signifie que Piwik va être très lent lors de l'utilisation des sessions en fichier.",
         "NfsFilesystemWarningSuffixInstall": "Utiliser les sessions en fichier avec NFS est très lent, donc Piwik va utiliser des sessions en base de données. Si vous avez plusieurs utilisateurs de tableaux de bords en parallèle, vous pourriez avoir besoin d'augmenter le nombre maximal de connexions au serveur de base de données.",
         "NoConfigFound": "Le fichier de configuration de Piwik ne peut être trouvé et vous essayez d'accéder à une page de Piwik.<br> <b>  » Vous pouvez <a href='index.php'>installer Piwik maintenant<\/a><\/b><br><small>Si vous avez déjà installé Piwik ne vous inquiétez pas Piwik réutilisera ces tables et leurs données.<\/small>",
+        "NotSupported": "non supporté",
         "Optional": "Optionnel",
         "Password": "mot de passe",
         "PasswordDoNotMatch": "Le mot de passe ne concorde pas",
         "PasswordRepeat": "mot de passe (à nouveau)",
         "PercentDone": "%s %% Fait",
+        "PiwikOrgNewsletter": "envoyez moi des courriels pour les mises à jour importantes de Piwik",
+        "PiwikProNewsletter": "Je suis intéressé par les services %sPiwik PRO%s (pas plus d'un courriel par mois)",
         "PleaseFixTheFollowingErrors": "Merci de corriger les erreurs suivantes",
         "PluginDescription": "Procédé d'installation de Piwik. L'installation est effectuée une unique fois. Si le fichier de configuration config\/config.inc.php est supprimé, l'installation recommencera.",
         "Requirements": "Pré requis Piwik",
@@ -1094,6 +1097,8 @@
         "SystemCheck": "Vérification du système",
         "SystemCheckAutoUpdateHelp": "Note: La mise à jour de Piwik en un clic requiert une permission en écriture sur le dossier de Piwik et son contenu.",
         "SystemCheckCreateFunctionHelp": "Piwik utilise des fonctions anonymes pour les callbacks.",
+        "SystemCheckCronArchiveProcess": "Tâche Cron d'archivage",
+        "SystemCheckCronArchiveProcessCLI": "Gestion des processus via ligne de commande",
         "SystemCheckDatabaseHelp": "Piwik requiert ou l'extension mysqli ou les extensions pdo et pdo_mysql.",
         "SystemCheckDebugBacktraceHelp": "View::factory ne pourra pas créer des vues pour le module appelé.",
         "SystemCheckError": "Une erreur s'est produite — elle doit être corrigée avant de pouvoir continuer",
@@ -1121,6 +1126,7 @@
         "SystemCheckPdoAndMysqliHelp": "Sur un serveur linux vous pouvez compiler PHP avec les options suivantes : %1$s Dans votre php.ini, ajoutez les lignes suivantes: %2$s",
         "SystemCheckPhp": "Version PHP",
         "SystemCheckPhpPdoAndMysqli": "Plus d'informations sur: %1$sPHP PDO%2$s et %3$sMYSQLI%4$s.",
+        "SystemCheckSessionAutostart": "Pour éviter certains problèmes veuillez définir le paramètre suivant dans votre fichier php.ini: session.auto_start=0",
         "SystemCheckSplHelp": "Vous devez configurer et recompiler PHP avec la librairie standard (par défaut).",
         "SystemCheckSummaryNoProblems": "Génial! Il n'y a aucun problème avec votre installation de Piwik. Donnez vous une tape dans le dos.",
         "SystemCheckSummaryThereWereErrors": "Oh-oh! Piwik a détecté des %1$sproblèmes critiques%2$s avec votre installation de Piwik. %3$sCes problèmes critiques doivent être fixés immédiatement.%4$s",
