--- a/lang/tr.json
+++ b/lang/tr.json
@@ -373,6 +373,7 @@
         "SendFeedback": "Geribildirim Yollayın",
         "SpecialRequest": "Piwik takımına özel bir sorunuz var mı?",
         "ThankYou": "Piwik'i daha iyi yapmamıza yardım ettiğiniz için teşekkür ederiz!",
+        "TopLinkTooltip": "Bize fikirlerinizi iletin, ya da Profesyonel Destek isteyin.",
         "VisitTheForums": "%sForumları%s ziyaret edin",
         "WantToThankConsiderDonating": "Piwik'in muhteşem olduğunu düşünüyor ve bunun için teşekkür etmek ister misiniz?"
     },
@@ -503,6 +504,7 @@
         "Faq": "SSS",
         "FileIntegrityWarningExplanation": "Dosya bütünlük kontrolü başarısız oldu ve hatalar raporlandı. Bu durum genellikle Piwik dosyalarının yüklenmesinde oluşan hatalardan meydana gelmektedir. Sorunu çözmek için tüm Piwik dosyalarını sunucunuza tekrar yüklemeniz ve sayfayı yenilemeniz gerekmektedir.",
         "First": "İlk",
+        "Flatten": "Düzleştir",
         "ForExampleShort": "Örneğin",
         "Forums": "Forum",
         "FromReferrer": "şuradan",
@@ -610,6 +612,7 @@
         "Others": "Diğerleri",
         "Outlink": "Dış link",
         "Outlinks": "Dış Bağlantılar",
+        "OverlayRowActionTooltip": "İstatistik verilerini direkt site üzerinde gör (yeni sekmede açılır)",
         "Overview": "Genel Bakış",
         "Pages": "Sayfalar",
         "ParameterMustIntegerBetween": "%s değeri %s ve %s arasında sayısal bir değer olmalıdır.",
@@ -648,6 +651,8 @@
         "Search": "Arama",
         "SearchNoResults": "Sonuç yok",
         "Seconds": "%ssn",
+        "SeeAll": "hepsini gör",
+        "Segment": "Segment",
         "Settings": "Ayarlar",
         "Shipping": "Teslimat",
         "ShortDay_1": "Pzt",
@@ -681,6 +686,7 @@
         "Table": "Tablo",
         "TagCloud": "Etiket bulutu",
         "Tax": "Vergi",
+        "TimeAgo": "%s önce",
         "TimeOnPage": "Sayfadaki süre",
         "Today": "Bugün",
         "Total": "Toplam",
@@ -708,8 +714,11 @@
         "WarningFileIntegrityNoMd5file": "md5_file() fonksiyonu bulunamadığı için dosya bütünlük kontrolü tamamlanamadı.",
         "Website": "Web sayfası",
         "Weekly": "Haftalık",
+        "WeeklyReport": "haftalık",
         "WeeklyReports": "Haftalık raporlar",
+        "WellDone": "Tebrikler!",
         "Widgets": "Birleşenler",
+        "YearlyReport": "yıllık",
         "YearlyReports": "Yıllık raporlar",
         "YearsDays": "%1$s yıl %2$s gün",
         "Yes": "Evet",
@@ -718,9 +727,11 @@
         "YourChangesHaveBeenSaved": "Değişiklikleriniz kaydedildi."
     },
     "Goals": {
+        "AbandonedCart": "Terkedilen Sepet",
         "AddGoal": "Hedef Ekle",
         "AddNewGoal": "Yeni Hedef Ekle",
         "AddNewGoalOrEditExistingGoal": "%sYeni Hedef ekle%s veya Mevcut Hedefleri %sDüzenle%s",
+        "ColumnConversions": "Dönüşümler",
         "Contains": "'%s' içeren",
         "ConversionRate": "'%s' dönüşüm oranları",
         "Conversions": "'%s' dönüşümleri",
@@ -730,6 +741,7 @@
         "DeleteGoalConfirm": "'%s' Hedefini silme konusunda emin misiniz?",
         "Download": "Dosya İndir",
         "Ecommerce": "Eticaret",
+        "EcommerceAndGoalsMenu": "E-ticaret & Hedefler",
         "GoalConversion": "Hedef dönüşümü",
         "GoalName": "Hedef İsmi",
         "Goals": "Goals",
