--- a/plugins/DevicesDetection/lang/ru.json
+++ b/plugins/DevicesDetection/lang/ru.json
@@ -1,11 +1,13 @@
 {
     "DevicesDetection": {
         "BrowserVersions": "Версии браузеров",
+        "Console": "Консоль",
         "dataTableLabelBrands": "Фирма-производитель",
         "dataTableLabelBrowserFamily": "Семейство браузеров",
         "dataTableLabelModels": "Модель",
         "dataTableLabelSystemVersion": "Версия операционной системы",
         "dataTableLabelTypes": "Тип",
+        "Device": "Устройство",
         "DeviceBrand": "Фирма-производитель устройства",
         "DeviceModel": "Модель устройства",
         "DevicesDetection": "Устройства посетителей",
@@ -13,6 +15,10 @@
         "OperatingSystemFamilies": "Семейства операционных систем",
         "OperatingSystemVersions": "Версии операционных систем",
         "PluginDescription": "Этот плагин предоставляет расширенную информацию о мобильных устройствах, таких как фирма-производитель, модель устройства, улучшенное обнаружение типов устройств (телевизор, консоль, смартфон, стационарный компьютер и т.д.) и другое. Этот плагин добавляет новый отчет в 'Посетители > Устройства'.",
-        "submenu": "Устройства"
+        "Smartphone": "Смартфон",
+        "submenu": "Устройства",
+        "Tablet": "Планшет",
+        "TV": "ТВ",
+        "UserAgent": "User-Agent"
     }
 }
