--- a/plugins/DevicesDetection/lang/tr.json
+++ b/plugins/DevicesDetection/lang/tr.json
@@ -16,6 +16,7 @@
         "DevicesDetection": "Ziyaretçi Cihazları",
         "DeviceType": "Cihaz tipi",
         "OperatingSystemVersions": "İşletim Sistemi versiyonları",
+        "SmartDisplay": "Akıllı görüntüleme",
         "Smartphone": "Akıllı Telefon",
         "submenu": "Cihazlar",
         "Tablet": "Tablet",
