--- a/lang/en.json
+++ b/lang/en.json
@@ -148,6 +148,7 @@
         "MenuDiagnostic": "Diagnostic",
         "MenuGeneralSettings": "General settings",
         "MenuManage": "Manage",
+        "MenuDevelopment": "Development",
         "OptOutComplete": "Opt-out complete; your visits to this website will not be recorded by the Web Analytics tool.",
         "OptOutCompleteBis": "Note that if you clear your cookies, delete the opt-out cookie, or if you change computers or Web browsers, you will need to perform the opt-out procedure again.",
         "OptOutExplanation": "Piwik is dedicated to providing privacy on the Internet. To provide your visitors with the choice of opting-out of Piwik Web Analytics, you can add the following HTML code on one of your website page, for example in a Privacy Policy page.",
