--- a/lang/en.json
+++ b/lang/en.json
@@ -1289,6 +1289,9 @@
         "NoWebsiteFound": "No website found",
         "NoWebsitesShort": "No Websites",
         "PullDownToRefresh": "Pull down to refresh...",
+        "Mobile_PossibleSslError": "Possible SSL certificate error",
+        "Mobile_PossibleSslErrorExplanation": "An error occurred that could be caused by an invalid or self signed certificate: "%s". Login might work for you when ignoring SSL validation but it is less secure. You can change SSL validation at any time in the settings.",
+        "Mobile_IgnoreSslError": "Ignore SSL Error",
         "RatingDontRemindMe": "Don't remind me",
         "RatingNotNow": "Not now",
         "RatingNow": "OK, I'll rate it now",
